--- a/SignalRSyncClient/Pages/Index.cshtml
+++ b/SignalRSyncClient/Pages/Index.cshtml
@@ -8,11 +8,21 @@
     <script>
         (async function () {
             const messageBox = document.querySelector("#messageBox");
+            const messageText = document.querySelector("#messageText");
             const connection = new signalR.HubConnectionBuilder().withUrl("chathub").withAutomaticReconnect().build();
             async function init() {
                 document.querySelector("#form1").addEventListener("submit",e => {
                     e.preventDefault();
                     connection.send("NewMessage", messageText.value);
+                    messageText.value = "";
+                    messageText.focus();
+                });
+                messageText.addEventListener("keydown", e => { 
+                    if(e.keyCode!==13 || e.altKey || e.ctrlKey || e.shiftKey){
+                        return;
+                    }
+                    e.preventDefault();
+                    document.querySelector("#form1").dispatchEvent(new SubmitEvent("submit"));
                 });
                 connection.on("NewMessage", msg => {
                     messageBox.insertAdjacentHTML("beforeend", `<p>${msg.createdBy}&nbsp;${msg.timeCreated}</p><p>${msg.message}</p>`);
@@ -28,7 +38,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <div style="">
-        <div id="messageBox" style="height:50vh;width:100%;overflow-y:scroll;outline: 1px solid red;">
+        <div id="messageBox" style="height:50vh;width:100%;overflow-y:scroll;outline: 1px solid red;text-align: left">
         </div>
         <form id="form1" style="display: flex;flex-flow: row nowrap;align-items: stretch;justify-content: right;">
             <textarea id="messageText" style="flex:1"></textarea>
