--- a/SignalRSyncServer/Pages/Index.cshtml
+++ b/SignalRSyncServer/Pages/Index.cshtml
@@ -4,33 +4,32 @@
     ViewData["Title"] = "Home page";
 }
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.min.js" integrity="sha512-7SRCYIJtR6F8ocwW7UxW6wGKqbSyqREDbfCORCbGLatU0iugBLwyOXpzhkPyHIFdBO0K2VCu57fvP2Twgx1o2A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script>
-        (async function () {
-            const tablebody = document.querySelector("#tablebody");
-            const templatetr = document.querySelector("#templatetr");
-            const connection = new signalR.HubConnectionBuilder().withUrl("ObserverHub").withAutomaticReconnect().build();
-            async function init() {
-                connection.on("ConnectedAsync", a => {
-                    tablebody.insertAdjacentHTML("beforeend", bindTR(a));
-                });
-                connection.on("DisconnectedAsync", a => {
-                    tablebody.querySelector(`[cid="${a}"]`).remove();
-                });
-                await connection.start();
-                const list = await connection.invoke("GetConnectedAllAsync");
-                tablebody.innerHTML = "";
-                list.forEach(a => {
-                    tablebody.insertAdjacentHTML("beforeend", bindTR(a));
-                });
-            }
-            function bindTR(item) {
-                return templatetr.innerHTML.replace(/\{\{(.+?)\}\}/g, (a, g, i, n) => { 
-                    return eval(`(${g})`)||"";
-                });
-            }
-            await init();
-        })();
+    
+    <script type="module">
+        import  'https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.min.js';
+        const tablebody = document.querySelector("#tablebody");
+        const templatetr = document.querySelector("#templatetr");
+        const connection = new signalR.HubConnectionBuilder().withUrl("ObserverHub").withAutomaticReconnect().build();
+        async function init() {
+            connection.on("ConnectedAsync", a => {
+                tablebody.insertAdjacentHTML("beforeend", bindTR(a));
+            });
+            connection.on("DisconnectedAsync", a => {
+                tablebody.querySelector(`[cid="${a}"]`).remove();
+            });
+            await connection.start();
+            const list = await connection.invoke("GetConnectedAllAsync");
+            tablebody.innerHTML = "";
+            list.forEach(a => {
+                tablebody.insertAdjacentHTML("beforeend", bindTR(a));
+            });
+        }
+        function bindTR(item) {
+            return templatetr.innerHTML.replace(/\{\{(.+?)\}\}/g, (a, g, i, n) => {
+                return eval(`(${g})`) || "";
+            });
+        }
+        await init();
     </script>
 }
 <div class="text-center">
